<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_settings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/close_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acc_cancel"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_alignParentStart="true"/>

                <TextView
                    android:id="@+id/update_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="23dp"
                    android:text="@string/acc_update"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />


            </RelativeLayout>



        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_profile_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_below="@+id/app_settings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/user_male_circle" />

    <TextView
        android:id="@+id/profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="148dp"
        android:text="@string/acc_pic"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        />

    <EditText
        android:id="@+id/acc_name"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_pic"
        android:layout_marginStart="20dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/acc_name"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/acc_phone"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/acc_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/acc_phone"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/acc_email"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/acc_phone"
        android:layout_marginStart="20dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/acc_email"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/acc_address"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/acc_email"
        android:layout_marginStart="20dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/acc_address"
        android:textSize="20sp" />

</RelativeLayout>
